; ModuleID = '/home/carl/AnghaBench/Cello/benchmarks/Sudoku/extr_sudoku_cello.c_main.c'
source_filename = "/home/carl/AnghaBench/Cello/benchmarks/Sudoku/extr_sudoku_cello.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Sudoku = type { i32 }

@Sudoku = common dso_local global i32 0, align 4
@stdin = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.Sudoku*, align 8
  %7 = alloca [1024 x i8], align 16
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* @Sudoku, align 4
  %9 = call %struct.Sudoku* @new(i32 %8)
  store %struct.Sudoku* %9, %struct.Sudoku** %6, align 8
  br label %10

10:                                               ; preds = %20, %19, %2
  %11 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %12 = load i32, i32* @stdin, align 4
  %13 = call i64 @fgets(i8* %11, i32 1024, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %10
  %16 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %17 = call i32 @strlen(i8* %16)
  %18 = icmp slt i32 %17, 81
  br i1 %18, label %19, label %20

19:                                               ; preds = %15
  br label %10

20:                                               ; preds = %15
  %21 = load %struct.Sudoku*, %struct.Sudoku** %6, align 8
  %22 = getelementptr inbounds [1024 x i8], [1024 x i8]* %7, i64 0, i64 0
  %23 = call i32 @Sudoku_Solve(%struct.Sudoku* %21, i8* %22)
  br label %10

24:                                               ; preds = %10
  %25 = load %struct.Sudoku*, %struct.Sudoku** %6, align 8
  %26 = call i32 @del(%struct.Sudoku* %25)
  ret i32 0
}

declare dso_local %struct.Sudoku* @new(i32) #1

declare dso_local i64 @fgets(i8*, i32, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @Sudoku_Solve(%struct.Sudoku*, i8*) #1

declare dso_local i32 @del(%struct.Sudoku*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
